# lab_3_oop

./: CMakeLists.txt  array.cpp  array.h  figure.cpp  figure.h  gtests.cpp  main.cpp
include/: array.h  figure.h  five_side.h  rhombus.h  six_side.h
src/: figure.cpp  five_side.cpp  rhombus.cpp  six_side.cpp
